fake data generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,20 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+
+add_executable(SimDataPublisher
+  src/sim_data_publisher.cpp
+  )
+
+ament_target_dependencies(SimDataPublisher
+  rclcpp
+  std_msgs
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,5 +33,9 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+install(TARGETS SimDataPublisher
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ament_package()
