--- a/package.xml
+++ b/package.xml
@@ -3,11 +3,19 @@
 <package format="3">
   <name>cot_pipeline</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Apache-2.0</description>
   <maintainer email="tony890723@gmail.com">tony</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <build_depend>rclcpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>tinyxml2</build_depend>
+
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>tinyxml2</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
