--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>Apache-2.0</description>
   <maintainer email="tony890723@gmail.com">tony</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
